tests/baselines/reference/templateStringUnterminated2.errors.txt
tests/cases/conformance/es6/templates/templateStringUnterminated2.ts(1,4): error TS1160: Unterminated template literal.


==== tests/cases/conformance/es6/templates/templateStringUnterminated2.ts (1 errors) ====
    `\`
       
!!! error TS1160: Unterminated template literal.